<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android">

	<EditTextPreference
		android:key="@string/pref_base_url_key"
		android:title="@string/pref_base_url_title"
		android:summary="@string/pref_base_url_summary"
		android:defaultValue="@string/base_url" />	
	<EditTextPreference
		android:key="@string/pref_branch_key"
		android:title="@string/pref_branch_title"
		android:summary="@string/pref_branch_summary"
		android:defaultValue="" />	
	<CheckBoxPreference android:defaultValue="false" 
		android:enabled="true"
		android:key="@string/pref_limit_available_key" 
		android:title="@string/pref_limit_available_title" 
		android:summary="@string/pref_limit_available_summary"/>	
	<CheckBoxPreference android:defaultValue="false" 
		android:enabled="true"
		android:key="@string/pref_hold_via_web_key" 
		android:title="@string/pref_hold_via_web_title" 
		android:summary="@string/pref_hold_via_web_summary"/><CheckBoxPreference android:summary="@string/pref_show_image_summary" android:defaultValue="true" android:title="@string/pref_show_image_title" android:key="@string/pref_show_image_key"/><CheckBoxPreference android:summary="@string/pref_limit_items_summary" android:defaultValue="true" android:title="@string/pref_limit_items_title" android:key="@string/pref_limit_items_key"/>

	<PreferenceCategory android:title="@string/prefcat_advanced">

		<EditTextPreference android:defaultValue="@string/search_url" 
							android:key="@string/pref_search_url_key" 
							android:title="@string/pref_search_url_title" 
							android:summary="@string/pref_search_url_summary"/>

		<EditTextPreference android:defaultValue="@string/login_url" 
							android:key="@string/pref_login_url_key" 
							android:title="@string/pref_login_url_title" 
							android:summary="@string/pref_login_url_summary"/>

		<EditTextPreference android:defaultValue="@string/placehold_url" 
							android:key="@string/pref_placehold_url_key" 
							android:title="@string/pref_placehold_url_title" 
							android:summary="@string/pref_placehold_url_summary"/>
	</PreferenceCategory>
			
</PreferenceScreen>
