<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="vertical"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:minWidth="250dp"
    	android:layout_gravity="center">

	    <TextView android:id="@+id/login_message"
	    		android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="10dp"
				android:textColor="#F00"
				android:visibility="gone"
			/>
	<LinearLayout 
			android:orientation="horizontal"
	    	android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
			>
    
		<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/login_username"
				android:minWidth="80dp"				
				android:layout_marginLeft="10dp"
			/>
		<EditText android:id="@+id/username"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:singleLine="true"
				android:layout_marginLeft="10dp"
				android:layout_marginRight="10dp"
			/>
	</LinearLayout>
	<LinearLayout 
			android:orientation="horizontal"
	    	android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
			>
    
		<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/login_password"
				android:minWidth="80dp"				
				android:layout_marginLeft="10dp"
			/>
		<EditText android:id="@+id/password"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:singleLine="true"
				android:password="true"
				android:inputType="textPassword"
				android:layout_marginLeft="10dp"
				android:layout_marginRight="10dp"
			/>
	</LinearLayout>

	<Button android:id="@+id/btnLoginGo"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:text="@string/login_submit"
		/>

</LinearLayout>